# lab2

./: CMakeLists.txt  main.cpp  test_version.cpp  tests.cpp
.github/workflows/: release.yml
